--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="primary-nav">
         <div class="primary-nav__head">
           <a href="/index.html">
-            <img class="primary-nav__logo" src="/asset/logos/coffee-beans-logo-and-footer.svg" alt="coffee bean logo"/>
+            <img class="primary-nav__logo" src="./asset/logos/coffee-beans-logo-and-footer.svg" alt="coffee bean logo"/>
           </a>
           <h2 class="primary-nav__header">nitro</h2>
         </div>
@@ -43,14 +43,14 @@
         </p>
           <a href="/page/menu.html"><button class="default-button">SHOP NOW</button></a>
         </div>
-      <img class="banner_logo"  src="/asset/images/coffeebeans-hero.png" alt="coffee bag"/>
+      <img class="banner_logo"  src="./asset/images/coffeebeans-hero.png" alt="coffee bag"/>
     </section>
 
   <section class="product">
     <h2 class="product-header">Our Products</h2>
     <div class="card-container">
       <article class="card">
-        <img class="card__pic" src="/asset/images/coffeebeans.png"alt="coffee beans"/>
+        <img class="card__pic" src="./asset/images/coffeebeans.png"alt="coffee beans"/>
         <div class="card__info">
           <div class="card__text">
             <h3 class="card__item">Coffee Beans</h3>
@@ -60,7 +60,7 @@
         </div>
       </article>
       <article class="card">
-        <img class="card__pic" src="/asset/images/coldbrew.png" alt="cold brew" />
+        <img class="card__pic" src="./asset/images/coldbrew.png" alt="cold brew" />
         <div class="card__info">
           <div class="card__text">
             <h3 class="card__item">Cold Brew</h3>
@@ -69,7 +69,7 @@
           <p class="card__price">$5</p>
       </article>
       <article class="card">
-        <img class="card__pic" src="/asset/images/inhousebrew.png" alt="in-house brew"/>
+        <img class="card__pic" src="./asset/images/inhousebrew.png" alt="in-house brew"/>
         <div class="card__info">
           <div class="card__text">
             <h3 class="card__item">In-house Brew</h3>
@@ -96,15 +96,15 @@
             We grow and roast our own beans. Every bean, every cup, every step of the way, We strive for excellence.
           </p>
           <div class="discount__logo-container">
-            <img class="discount__logo" src="/asset/logos/planting.svg" alt="planting"/>
-            <img class="discount__logo" src="/asset/logos/coffee-beans.svg" alt="coffee-bean"/> -->
-            <img class="discount__logo" src="/asset/logos/coffee-cup.svg" alt="coffee-cup"/> -->
+            <img class="discount__logo" src="./asset/logos/planting.svg" alt="planting"/>
+            <img class="discount__logo" src="./asset/logos/coffee-beans.svg" alt="coffee-bean"/> -->
+            <img class="discount__logo" src="./asset/logos/coffee-cup.svg" alt="coffee-cup"/> -->
           </div>
           <a href="/page/menu.html"><button class="default-button">LEARN MORE</button></a>
       </div>
       <div class="discount__container-image">
         <div class="rotating-can-container">
-          <img id="rotating-can" src="/asset/images/tiltedcan.png" alt="tilted-can">
+          <img id="rotating-can" src="./asset/images/tiltedcan.png" alt="tilted-can">
         </div>
         <div id="image-box"></div>
       </div>
@@ -135,13 +135,13 @@
       <article class="footer-card">
         <h3 class="footer__list-item">Social</h3>
         <a href="https://www.facebook.com/">
-          <img class="nav-footer__logo" src="/asset/logos/Facebook-Icon.svg" alt="Facebook"/>
+          <img class="nav-footer__logo" src="./asset/logos/Facebook-Icon.svg" alt="Facebook"/>
         </a>
         <a href="https://www.yelp.com/">
-          <img class="nav-footer__logo" src="/asset/logos/Yelp-Icon.svg" alt="Yelp"/>
+          <img class="nav-footer__logo" src="./asset/logos/Yelp-Icon.svg" alt="Yelp"/>
         </a>
         <a href="https://www.instagram.com/">
-          <img class="nav-footer__logo" src="/asset/logos/Instagram-Icon.svg" alt="Instagram"/>
+          <img class="nav-footer__logo" src="./asset/logos/Instagram-Icon.svg" alt="Instagram"/>
         </a>
       </article>
     </div>
