fix compatable issue and file strcture

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect"  href="https://fonts.googleapis.com" />
     <link rel="preconnect"  href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"  rel="stylesheet"/>
-    <link rel="stylesheet"  href="./css/global.css" />
+    <link rel="stylesheet"  href="/css/landing.css" />
     <title>Coffee Shop - Home</title>
   </head>
 
@@ -97,8 +97,8 @@
           </p>
           <div class="discount__logo-container">
             <img class="discount__logo" src="./asset/logos/planting.svg" alt="planting"/>
-            <img class="discount__logo" src="./asset/logos/coffee-beans.svg" alt="coffee-bean"/> -->
-            <img class="discount__logo" src="./asset/logos/coffee-cup.svg" alt="coffee-cup"/> -->
+            <img class="discount__logo" src="./asset/logos/coffee-beans.svg" alt="coffee-bean"/>
+            <img class="discount__logo" src="./asset/logos/coffee-cup.svg" alt="coffee-cup"/>
           </div>
           <a href="/page/menu.html"><button class="default-button">LEARN MORE</button></a>
       </div>
@@ -118,6 +118,7 @@
 
 <footer>
     <div class="footer">
+      <img class="footer__logo" src="./asset/logos/coffee-beans-logo-and-footer.svg" alt="coffee bean logo"/>
       <article class="footer-card">
         <h3 class="footer__list-item">Address</h3>
         <p class="footer__item-detail">503 Broadway Penthouse</p>
