fix menu linking

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect"  href="https://fonts.googleapis.com" />
     <link rel="preconnect"  href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"  rel="stylesheet"/>
-    <link rel="stylesheet"  href="./css/global.css" />
+    <link rel="stylesheet"  href="./css/landing.css" />
     <title>Coffee Shop - Home</title>
   </head>
 
@@ -25,10 +25,10 @@
             <a class="primary-nav__link" href="#">ABOUT</a>
           </li>
           <li class="primary-nav__item">
-            <a class="primary-nav__link" href="/page/menu.html">MENU</a>
+            <a class="primary-nav__link" href="./page/menu.html">MENU</a>
           </li>
           <li class="primary-nav__item">
-            <a id="primary-nav__item--highlight" class="primary-nav__link" href="/page/menu.html">SHOP NOW</a>
+            <a id="primary-nav__item--highlight" class="primary-nav__link" href="./page/menu.html">SHOP NOW</a>
           </li>
         </ul>
       </nav>
@@ -41,7 +41,7 @@
           Coffee is a brewed drink prepared from roasted coffee beans, the seeds
           of berries from certain Coffea species.
         </p>
-          <a href="/page/menu.html"><button class="default-button">SHOP NOW</button></a>
+          <a href="./page/menu.html"><button class="default-button">SHOP NOW</button></a>
         </div>
       <img class="banner_logo"  src="./asset/images/coffeebeans-hero.png" alt="coffee bag"/>
     </section>
@@ -79,7 +79,7 @@
         </div>
       </article>
       <div class="button-wrapper">
-        <a href="/page/menu.html">
+        <a href="./page/menu.html">
           <button id="product-button" class="default-button">VIEW ALL</button>
         </a>
       </div>
@@ -100,7 +100,7 @@
             <img class="discount__logo" src="./asset/logos/coffee-beans.svg" alt="coffee-bean"/>
             <img class="discount__logo" src="./asset/logos/coffee-cup.svg" alt="coffee-cup"/>
           </div>
-          <a href="/page/menu.html"><button class="default-button">LEARN MORE</button></a>
+          <a href="./page/menu.html"><button class="default-button">LEARN MORE</button></a>
       </div>
       <div class="discount__container-image">
         <div class="rotating-can-container">
